# fuck-os

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md
crates/kernel/: .gitignore  Cargo.toml
crates/kernel/src/: main.rs
crates/kernel/src/arch/: mod.rs
crates/kernel/src/proc/: mod.rs
crates/kernel/src/vga/: mod.rs
image/: .gitignore
script/: img-write-linux.sh  img-write-osx.sh  img-write-win.bat  qemu-debug-linux.sh  qemu-debug-win.bat
src/boot/: CMakeLists.txt  boot.c  boot.h  start.asm
src/kernel/: Cargo.toml
src/kernel/.cargo/: config.toml
src/kernel/src/: main.rs  panic.rs
src/kernel/src/allocator/: heap.rs  mod.rs  slab.rs
src/kernel/src/arch/: mod.rs
src/kernel/src/arch/aarch64/interrupt/: mod.rs
src/kernel/src/arch/shared/: cpuid.rs  mod.rs  time.rs
src/kernel/src/arch/x86/: paging.rs
src/kernel/src/arch/x86_64/: gdt.rs  mod.rs  paging.rs  reg.rs
src/kernel/src/arch/x86_64/hw/: console.rs  mod.rs  port.rs  qemu.rs  vga.rs
src/kernel/src/arch/x86_64/interrupt/: mod.rs
src/kernel/src/arch/x86_64/paging/: mod.rs
src/kernel/src/log/: mod.rs
src/kernel/src/mem/: mapper.rs  mod.rs
src/kernel/src/support/: mod.rs
src/kernel/src/test/: mod.rs
src/kernel/src/vga/: mod.rs
